k8s-hl/holofood-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: holofood-app
  labels:
    app: holofood
spec:
  replicas: 1
  selector:
    matchLabels:
      app: holofood
  template:
    metadata:
      labels:
        app: holofood
    spec:
      securityContext:
        runAsUser: 7123
        runAsGroup: 1347
      volumes:
        - name: holofood-nfs
          nfs:
            server: hh-isi-srv-vlan1496.ebi.ac.uk
            path: /ifs/public/rw/metagenomics/holofood-data-portal
      containers:
        - image: quay.io/microbiome-informatics/holofood-data-portal:ebi-k8s-hl
          imagePullPolicy: IfNotPresent
          name: holofood-data-portal
          ports:
            - containerPort: 8000
              name: gunicorn
          volumeMounts:
            - mountPath: "/app/data"
              name: holofood-nfs
      imagePullSecrets:
        - name: quay-pull-secret
