k8s-hl/holofood-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: holofood
  namespace: holofood-hl-prod
  labels:
    app: holofood
spec:
  type: NodePort
  selector:
    app: holofood
  ports:
    - port: 8000
      targetPort: 8000
