k8s-hl/holofood-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: holofood-ingress
  namespace: holofood-hl-prod
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: www.holofooddata.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: holofood
                port:
                  number: 8000
